[gd_scene load_steps=4 format=3 uid="uid://bpfw5dlmgwvwx"]

[ext_resource type="Script" path="res://src/main/scene/role/item/item_option.gd" id="1_2wxsy"]
[ext_resource type="Texture2D" uid="uid://c802l2go2yvpl" path="res://src/main/assets/texture/Items/Weapons/sword.png" id="1_bq5t6"]
[ext_resource type="FontFile" uid="uid://cah4xl5efry1d" path="res://src/main/assets/font/tenderness.otf" id="2_to20f"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
anchors_preset = -1
anchor_right = 0.094
anchor_bottom = 0.046
offset_right = -0.480011
offset_bottom = 0.319996
color = Color(0.454902, 0.454902, 0.454902, 1)
script = ExtResource("1_2wxsy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_bq5t6")

[node name="LabelName" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 2.0
offset_right = 79.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_to20f")
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 27.0
offset_right = 166.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_to20f")
theme_override_font_sizes/font_size = 8
text = "Description of Item"

[node name="LabelLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 170.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_to20f")
theme_override_font_sizes/font_size = 12
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
